# lingogram

./: README.md  package-lock.json
extension/: .eslintrc.cjs  manifest.config.ts  package-lock.json  package.json  tailwind.config.js  vite.config.ts
extension/src/: App.tsx  ContentReact.tsx  content.ts  content.tsx  main.tsx  output.css
extension/src/components/Popover/: index.tsx
server/: Cargo.toml
server/src/: lib.rs  main.rs
server/tests/: health_check.rs
